--- a/AskME/templates/inc/base.html
+++ b/AskME/templates/inc/base.html
@@ -7,6 +7,7 @@
     <title>base</title>
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
 </head>
 
 <body>
