--- a/AskME/templates/main/signup.html
+++ b/AskME/templates/main/signup.html
@@ -10,14 +10,14 @@
     <img src="{% static "img/unknown.jpg" %}" class="unknown" alt="" style="float: right">
     <form class="needs-validation" style="width: max-content" novalidate>
         <div class="mb-3 row">
-            <label class="col-sm-3 col-form-label">Login</label>
+            <label class="col-sm-3 col-form-label">Username</label>
             <div class="col-sm-6">
                 <input type="text" class="form-control" id="validationCustom01" required>
                 <div class="valid-feedback">
                     Ok
                 </div>
                 <div class="invalid-feedback">
-                    Please, enter your login
+                    Please, enter your username
                 </div>
             </div>
         </div>
@@ -30,18 +30,6 @@
                 </div>
                 <div class="invalid-feedback">
                     Where is an email???
-                </div>
-            </div>
-        </div>
-        <div class="mb-3 row">
-            <label class="col-sm-3 col-form-label">NickName</label>
-            <div class="col-sm-6 has-validation">
-                <input type="text" class="form-control" id="validationCustom03" required>
-                <div class="valid-feedback">
-                    Ok
-                </div>
-                <div class="invalid-feedback">
-                    NickName is needed
                 </div>
             </div>
         </div>
