[FIX] Fixed indent of question-items and answers

--- a/AskME/templates/inc/answer.html
+++ b/AskME/templates/inc/answer.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="row">
+<div class="row" style="margin-bottom: 20px">
     <div class="col-10">
         <article class="blog-post border border-2" style="border-radius: 10px">
             <div class="row">
