--- a/AskME/static/css/style.css
+++ b/AskME/static/css/style.css
@@ -20,11 +20,12 @@ img {
 }
 
 
+
 button.like{
 	width: 30px;
 	height: 30px;
 	margin: 0 auto;
-	line-heigth: 50px;
+	line-height: 50px;
 	border-radius: 50%;
 	color: rgba(0,150,136 ,1);
 	background-color:rgba(38,166,154 ,0.3);
