--- a/AskME/templates/main/question.html
+++ b/AskME/templates/main/question.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="col-md-8">
-    <article class="blog-post">
+    <article class="blog-post" style="margin-bottom: 50px">
         <div class="row">
             <div class="col-auto">
                 <img src="{% static "img/avatar.jpeg" %}" class="avatar" alt="" />
