--- a/AskME/templates/main/tag.html
+++ b/AskME/templates/main/tag.html
@@ -6,7 +6,7 @@
 <div class="col-md-8">
     <div class="pb-4 mb-4 fst-italic border-bottom row">
         <div class="col-auto"><h3>Tag: </h3></div>
-        <div class="col-auto"><h3 style="color: #bb2d3b">{{ tag }}</h3></div>
+        <div class="col-auto"><h3 style="color: {{ tag.color }}">{{ tag }}</h3></div>
     </div>
 
     {% for question in page %}
